<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2017 Lizhaotailang
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/button_success"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/color_success"
        android:text="Success"
        android:textColor="@color/accent_color_success"/>

    <Button
        android:id="@+id/button_info"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/color_info"
        android:text="Info"
        android:textColor="@color/accent_color_info"/>

    <Button
        android:id="@+id/button_warning"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/color_warning"
        android:text="Warning"
        android:textColor="@color/accent_color_warning"/>

    <Button
        android:id="@+id/button_error"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/color_error"
        android:text="Error"
        android:textColor="@color/accent_color_error"/>

    <Button
        android:id="@+id/button_normal"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimary"
        android:text="Normal"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_custom"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#009688"
        android:text="Custom"
        android:textColor="@android:color/white"/>

</LinearLayout>